# Openenv_Support_ticket-sim

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: __init__.py  tickets.py
server/: Dockerfile  __init__.py  app.py  requirements.txt  support_triage_environment.py
tasks/: __init__.py  graders.py  task_definitions.py
tests/: test_environment.py
